Various cleanups in tests.
* Remove useless classes, exceptions and etc.
* Lambda conversions
* Deprecation fixes.

Signed-off-by: Alexander Kurtakov <akurtako@redhat.com>